--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -77,7 +77,7 @@
   "STAKE_7": "",
   "STAKE_8": "",
   "STAKE_9": "",
-  "STAKE_10": "",
+  "HOME_38": "",
   "STAKE_11": "",
   "STAKE_12": "",
   "STAKE_13": "",
@@ -139,26 +139,26 @@
   "STAKE_86": "",
   "STAKE_87": "",
 
-  "DIFI_1": "",
-  "DIFI_2": "",
-  "DIFI_3": "",
-  "DIFI_4": "",
-  "DIFI_5": "",
-  "DIFI_6": "",
-  "DIFI_7": "",
-  "DIFI_8": "",
-  "DIFI_9": "",
-  "DIFI_10": "",
-  "DIFI_11": "",
-  "DIFI_13": "",
-  "DIFI_14": "",
-  "DIFI_15": "",
-  "DIFI_16": "",
-  "DIFI_17": "",
-  "DIFI_18": "",
-  "DIFI_19": "",
-  "DIFI_22": "",
-  "DIFI_23": "",
+  "DEFI_1": "",
+  "DEFI_2": "",
+  "DEFI_3": "",
+  "DEFI_4": "",
+  "DEFI_5": "",
+  "DEFI_6": "",
+  "DEFI_7": "",
+  "DEFI_8": "",
+  "DEFI_9": "",
+  "DEFI_10": "",
+  "DEFI_11": "",
+  "DEFI_13": "",
+  "DEFI_14": "",
+  "DEFI_15": "",
+  "DEFI_16": "",
+  "DEFI_17": "",
+  "DEFI_18": "",
+  "DEFI_19": "",
+  "DEFI_22": "",
+  "DEFI_23": "",
 
   "ERROR_1": "",
 
