--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,6 @@
 {
   "HOME_1": "The sKCS protocol currently has <wrap /> <number>{{totalKCS}}</number> of KCS staked and <wrap /><number>{{totalRewards}}</number> KCS of rewards paid with <wrap /><number>{{apy}}%</number> APY",
   "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}</number> of KCS staked and <number>{{totalRewards}}</number> KCS of rewards paid with <number>{{apy}}%</number> APY",
-  "HOME_4": "APY",
   "HOME_5": "Stake Now",
   "HOME_6": "Staking, Vote and get rewards in 4 steps",
   "HOME_7": "Staking confirmed!",
@@ -63,14 +62,12 @@
   "HOME_68": "summary",
   "HOME_69": "twitter:title",
   "HOME_70": "description",
-
   "STAKE_1": "Unstaking confirmed!",
   "STAKE_2": "Unstake",
   "STAKE_6": "Stake KCS",
   "STAKE_7": "Stake KCS and receive sKCS as proof while staking",
   "STAKE_8": "Available to stake",
   "STAKE_9": "Get more KCS",
-  "STAKE_10": "APY",
   "STAKE_12": "Staked amount",
   "STAKE_13": "Add token to wallet",
   "STAKE_14": "Pending amount",
@@ -81,7 +78,7 @@
   "STAKE_21": "Retry",
   "STAKE_23": "More",
   "STAKE_24": "How do I get my staking rewards?",
-  "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS. ",
+  "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS.",
   "STAKE_26": "You do not need to claim your rewards, sKCS you holds enables you to withdraw more KCS when you unstake sKCS.",
   "STAKE_27": "Wallet Balance",
   "STAKE_28": "Can I UNSTAKE my sKCS at any time?",
@@ -127,30 +124,27 @@
   "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
   "STAKE_86": "keywords",
   "STAKE_87": "Staked Balance",
-
-  "DIFI_1": "Liquidity",
-  "DIFI_2": "Use sKCS across the DeFi ecosystem",
-  "DIFI_3": "Use sKCS in liquidity mining pools",
-  "DIFI_4": "Supply & Borrow",
-  "DIFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
-  "DIFI_6": "supply APR",
-  "DIFI_7": "Supply APY",
-  "DIFI_8": "Borrow APY",
-  "DIFI_9": "Collateral Factor",
-  "DIFI_10": "Supply",
-  "DIFI_11": "Borrow",
-  "DIFI_13": "Apr",
-  "DIFI_14": "Total Liquidity",
-  "DIFI_15": "Add Liquidity",
-  "DIFI_16": "Swap",
-  "DIFI_17": "DeFi Market | sKCS",
-  "DIFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
-  "DIFI_19": "description",
-  "DIFI_22": "Yearly interest",
-  "DIFI_23": "Collateral factor",
-  
+  "DEFI_1": "Liquidity",
+  "DEFI_2": "Use sKCS across the DeFi ecosystem",
+  "DEFI_3": "Use sKCS in liquidity mining pools",
+  "DEFI_4": "Supply & Borrow",
+  "DEFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
+  "DEFI_6": "supply APR",
+  "DEFI_7": "Supply APY",
+  "DEFI_8": "Borrow APY",
+  "DEFI_9": "Collateral Factor",
+  "DEFI_10": "Supply",
+  "DEFI_11": "Borrow",
+  "DEFI_13": "Apr",
+  "DEFI_14": "Total Liquidity",
+  "DEFI_15": "Add Liquidity",
+  "DEFI_16": "Swap",
+  "DEFI_17": "DeFi Market | sKCS",
+  "DEFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
+  "DEFI_19": "description",
+  "DEFI_22": "Yearly interest",
+  "DEFI_23": "Collateral factor",
   "ERROR_1": "Sorry,Not Found.",
-
   "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
   "COMPONENT_3": "Amount",
   "COMPONENT_4": "Insufficient balance",
