--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -80,7 +80,7 @@
     "STAKE_7": "",
     "STAKE_8": "",
     "STAKE_9": "",
-    "STAKE_10": "",
+    "HOME_38": "",
     "STAKE_11": "",
     "STAKE_12": "",
     "STAKE_13": "",
@@ -159,34 +159,34 @@
     "STAKE_86": "",
     "STAKE_87": "",
   
-    "DIFI_1": "",
-    "DIFI_2": "",
-    "DIFI_3": "",
-    "DIFI_4": "",
-    "DIFI_5": "",
-    "DIFI_6": "",
-    "DIFI_7": "",
-    "DIFI_8": "",
-    "DIFI_9": "",
-    "DIFI_10": "",
-    "DIFI_11": "",
-    "DIFI_12": "",
-    "DIFI_13": "",
-    "DIFI_14": "",
-    "DIFI_15": "",
-    "DIFI_16": "",
-    "DIFI_17": "",
-    "DIFI_18": "",
-    "DIFI_19": "",
-    "DIFI_20": "",
-    "DIFI_21": "",
-    "DIFI_22": "",
-    "DIFI_23": "",
-    "DIFI_24": "",
-    "DIFI_25": "",
-    "DIFI_26": "",
-    "DIFI_27": "",
-    "DIFI_28": "",
+    "DEFI_1": "",
+    "DEFI_2": "",
+    "DEFI_3": "",
+    "DEFI_4": "",
+    "DEFI_5": "",
+    "DEFI_6": "",
+    "DEFI_7": "",
+    "DEFI_8": "",
+    "DEFI_9": "",
+    "DEFI_10": "",
+    "DEFI_11": "",
+    "DEFI_12": "",
+    "DEFI_13": "",
+    "DEFI_14": "",
+    "DEFI_15": "",
+    "DEFI_16": "",
+    "DEFI_17": "",
+    "DEFI_18": "",
+    "DEFI_19": "",
+    "DEFI_20": "",
+    "DEFI_21": "",
+    "DEFI_22": "",
+    "DEFI_23": "",
+    "DEFI_24": "",
+    "DEFI_25": "",
+    "DEFI_26": "",
+    "DEFI_27": "",
+    "DEFI_28": "",
   
     "ERROR_1": "",
 
