--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
   "HOME_5": "Stake Now",
   "HOME_6": "Staking, Vote and get rewards in 4 steps",
   "HOME_7": "Staking confirmed!",
-  "HOME_8": "Stake {{asset}} KCS and receive   ",
+  "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
   "HOME_9": "View transaction on chain.",
   "HOME_10": "Staking failed!",
   "HOME_11": "Please try again.",
@@ -56,12 +56,6 @@
   "HOME_62": "KCS Staking | sKCS",
   "HOME_63": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
   "HOME_64": "KCS staking, sKCS, stake KCS",
-  "HOME_65": "twitter:description",
-  "HOME_66": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
-  "HOME_67": "twitter:card",
-  "HOME_68": "summary",
-  "HOME_69": "twitter:title",
-  "HOME_70": "description",
   "STAKE_1": "Unstaking confirmed!",
   "STAKE_2": "Unstake",
   "STAKE_6": "Stake KCS",
@@ -107,9 +101,9 @@
   "STAKE_51": "KuCoin Token Staking | Earn KCS Rewards | KuCoin Community Chain",
   "STAKE_52": "Buy KCS for staking and voting. Users can earn high APY rewards with KCC staking.",
   "STAKE_53": "KuCoin token, KCS, KCC, buy KCS, KCS staking",
-  "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
+  "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS.",
   "STAKE_57": "Unstaking failed!",
-  "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
+  "STAKE_61": "Stake {{inputValue}} KCS and receive {{totalsKSC}} sKCS.",
   "STAKE_65": "Exchange rate",
   "STAKE_66": "You will receive",
   "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
