--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,14 +1,13 @@
 {
-  "HOME_1": "The sKCS protocol currently has <wrap /> <number>{{totalKCS}}</number> of KCS staked and <wrap /><number>{{totalRewards}}</number> KCS of rewards paid with <wrap /><number>{{apy}}%</number> APY",
-  "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}</number> of KCS staked and <number>{{totalRewards}}</number> KCS of rewards paid with <number>{{apy}}%</number> APY",
+  "HOME_1": "The sKCS protocol currently has <wrap \/> <number>{{totalKCS}}<\/number> of KCS staked and <wrap \/><number>{{totalRewards}}<\/number> KCS of rewards paid with <wrap \/><number>{{apy}}%<\/number> APY",
+  "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}<\/number> of KCS staked and <number>{{totalRewards}}<\/number> KCS of rewards paid with <number>{{apy}}%<\/number> APY",
   "HOME_5": "Stake Now",
-  "HOME_6": "Staking, Vote and get rewards in 4 steps",
   "HOME_7": "Staking confirmed!",
   "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
   "HOME_9": "View transaction on chain.",
   "HOME_10": "Staking failed!",
   "HOME_11": "Please try again.",
-  "HOME_12": "APY is denominated in terms of sKCS, not USD. The calculation is based on the sKCS/KCS exchange rate 2 days ago, it is not compounded and is not a guaranteed or promised return or profit. APY = (exchange price at this time - exchange price 48 hours ago)*180*100%",
+  "HOME_12": "APY is denominated in terms of sKCS, not USD. The calculation is based on the sKCS\/KCS exchange rate 2 days ago, it is not a guaranteed or promised return or profit. APY = (exchange price at this time - exchange price 48 hours ago)*180*100%",
   "HOME_13": "Monthly Rewards",
   "HOME_14": "Yearly Rewards",
   "HOME_18": "Rewards Calculator",
@@ -33,29 +32,15 @@
   "HOME_38": "APY",
   "HOME_39": "Follow Us",
   "HOME_40": "Click media icon to follow us",
-  "HOME_41": "1.How to participate in KCC node validator with staking?",
-  "HOME_42": "By staking your KCS, you participate in the node selection voting process of Kucoin Community Chain（KCC）validators and earn rewards. Staking KCS is critical for securing the network.",
-  "HOME_43": "Validators can stake KCS to themselves, and they can also receive delegations from KCS voting.",
-  "HOME_44": "You can vote for validators by staking KCS, 1 KCS represents 1 vote, you can get the KCS back if you redeemthe voting.",
-  "HOME_45": "2.How to check/withdraw my staking rewards?",
-  "HOME_46": "1.Click on 'My Vote' to see your rewards overview",
-  "HOME_47": "2.You can check the rewards of each validator and click “Claim” to get it",
-  "HOME_48": "3.How to redeem my staking?",
-  "HOME_49": "1.Click on 'My Vote'  to see your staking overview",
-  "HOME_50": "2.Click 'Redeem' to stop staking",
-  "HOME_51": "3.You can withdraw it after 3days unbinding period, during the unbinding period, your staked KCS will not receive any rewards.",
+  "HOME_45": "2.How to check\/withdraw my staking rewards?",
   "HOME_52": "FAQ",
   "HOME_53": "More",
   "HOME_54": "Audit institutions",
-  "HOME_55": "Audit for registration",
-  "HOME_56": "Candidate registration",
-  "HOME_57": "Voting as a validatåorå",
   "HOME_59": "Learn More",
   "HOME_60": "Have more questions?",
   "HOME_61": "Check out our Gitbook for more information",
-  "HOME_62": "KCS Staking | sKCS",
   "HOME_63": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
-  "HOME_64": "KCS staking, sKCS, stake KCS",
+  "HOME_66": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
   "STAKE_1": "Unstaking confirmed!",
   "STAKE_2": "Unstake",
   "STAKE_6": "Stake KCS",
@@ -68,7 +53,6 @@
   "STAKE_15": "Pending amount means the sKCS unstaking is under processing, the period takes around 3-6 days to process, you can withdraw it after that.",
   "STAKE_17": "Available withdraw amount",
   "STAKE_18": "Withdraw",
-  "STAKE_20": "Voted Failed",
   "STAKE_21": "Retry",
   "STAKE_23": "More",
   "STAKE_24": "How do I get my staking rewards?",
@@ -80,30 +64,18 @@
   "STAKE_30": "After applying for unstake, the amount will be shown in 'Pending Amount' and you can withdraw KCS once the mount goes to 'Available Withdraw Amount'.",
   "STAKE_31": "How can I use sKCS?",
   "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
-  "STAKE_33": "Borrowing/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
-  "STAKE_34": "Liquidity provision - sKCS/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs.",
+  "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
   "STAKE_35": "Statistics",
   "STAKE_36": "Total staked amount",
   "STAKE_37": "Stakers",
   "STAKE_38": "sKCS market cap",
-  "STAKE_39": "Voted Successful",
-  "STAKE_40": "Check My Vote",
-  "STAKE_41": "Official Website",
   "STAKE_42": "Contract address",
-  "STAKE_43": "Current Ranking",
-  "STAKE_44": "Votes/Proportion",
   "STAKE_45": "Introduction",
-  "STAKE_46": "This is a leading Staking and Masternode hosting platform that provides secure and convenient hosting services while managing close to a billion dollars in assets and the highest number of nodes globally. As one of dollars in assets and the highest number of nodesThis is a leading Staking and Masternode hosting platform that provides secure and convenient hosting services while managing close to a billion dollars in assets and the highest number of nodes globally. As one of dollars in assets and the highest number of nodes.",
-  "STAKE_47": "This validator is 'In Jail' for bad behavior and does not support being voted.",
-  "STAKE_48": "Vote",
   "STAKE_49": "Current balance",
   "STAKE_50": "Get sKCS",
-  "STAKE_51": "KuCoin Token Staking | Earn KCS Rewards | KuCoin Community Chain",
-  "STAKE_52": "Buy KCS for staking and voting. Users can earn high APY rewards with KCC staking.",
-  "STAKE_53": "KuCoin token, KCS, KCC, buy KCS, KCS staking",
-  "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS.",
+  "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
   "STAKE_57": "Unstaking failed!",
-  "STAKE_61": "Stake {{inputValue}} KCS and receive {{totalsKSC}} sKCS.",
+  "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
   "STAKE_65": "Exchange rate",
   "STAKE_66": "You will receive",
   "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
@@ -111,9 +83,7 @@
   "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
   "STAKE_72": "Notification",
   "STAKE_73": "Copied!",
-  "STAKE_74": "Staking | sKCS",
   "STAKE_76": "Stake KCS and receive sKCS as proof to earn staking rewards with high APY",
-  "STAKE_77": "stake KCS, sKCS",
   "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
   "STAKE_86": "keywords",
   "STAKE_87": "Staked Balance",
@@ -122,21 +92,20 @@
   "DEFI_3": "Use sKCS in liquidity mining pools",
   "DEFI_4": "Supply & Borrow",
   "DEFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
-  "DEFI_6": "supply APR",
+  "DEFI_6": "supply APY",
   "DEFI_7": "Supply APY",
   "DEFI_8": "Borrow APY",
   "DEFI_9": "Collateral Factor",
   "DEFI_10": "Supply",
   "DEFI_11": "Borrow",
-  "DEFI_13": "Apr",
+  "DEFI_13": "APR",
   "DEFI_14": "Total Liquidity",
   "DEFI_15": "Add Liquidity",
   "DEFI_16": "Swap",
-  "DEFI_17": "DeFi Market | sKCS",
   "DEFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
   "DEFI_22": "Yearly interest",
   "DEFI_23": "Collateral factor",
-  "ERROR_1": "Sorry,Not Found.",
+  "ERROR_1": "Sorry, Not Found.",
   "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
   "COMPONENT_3": "Amount",
   "COMPONENT_4": "Insufficient balance",
@@ -152,7 +121,6 @@
   "COMPONENT_15": "Please select one of the wallets in the list",
   "COMPONENT_16": "Connect Your Wallet",
   "COMPONENT_17": "Please connect your wallet with one of the wallet providers",
-  "COMPONENT_18": "Unicorn Contest",
   "COMPONENT_19": "Unsupported Network",
   "COMPONENT_20": "Provider Error",
   "COMPONENT_21": "No provider was found",
