--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,140 +1,142 @@
 {
-  "HOME_1": "The sKCS protocol currently has <wrap \/> <number>{{totalKCS}}<\/number> of KCS staked and <wrap \/><number>{{totalRewards}}<\/number> KCS of rewards paid with <wrap \/><number>{{apy}}%<\/number> APY",
-  "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}<\/number> of KCS staked and <number>{{totalRewards}}<\/number> KCS of rewards paid with <number>{{apy}}%<\/number> APY",
-  "HOME_5": "Stake Now",
-  "HOME_7": "Staking confirmed!",
-  "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
-  "HOME_9": "View transaction on chain.",
-  "HOME_10": "Staking failed!",
-  "HOME_11": "Please try again.",
-  "HOME_12": "APY is denominated in terms of sKCS, not USD. The calculation is based on the sKCS\/KCS exchange rate 2 days ago, it is not a guaranteed or promised return or profit. APY = (exchange price at this time - exchange price 48 hours ago)*180*100%",
-  "HOME_13": "Monthly Rewards",
-  "HOME_14": "Yearly Rewards",
-  "HOME_18": "Rewards Calculator",
-  "HOME_19": "Calculate your staking rewards and stake KCS now",
-  "HOME_20": "Enter the staking amount",
-  "HOME_21": "Connect Wallet",
-  "HOME_22": "Stake",
-  "HOME_23": "Decentralized",
-  "HOME_24": "Stake KCS to support network decentralisation and watch your sKCS value grow.",
-  "HOME_25": "Get Rewards",
-  "HOME_26": "In return for staking your KCS, sKCS accrues staking rewards over time.",
-  "HOME_27": "Leverage",
-  "HOME_28": "Use your sKCS to earn additional yields and put your sKCS to work across the KCC ecosystem.",
-  "HOME_29": "Security",
-  "HOME_30": "sKCS.io is the most reliable liquid staking protocol built on KCC, and our smart contracts have been audited by BlockSec.",
-  "HOME_31": "Why staking with sKCS",
-  "HOME_32": "1. Connect Wallet",
-  "HOME_33": "2. Stake KCS",
-  "HOME_35": "3. Get sKCS",
-  "HOME_36": "4. Use sKCS",
-  "HOME_37": "Start staking and grow your assets in only 4 steps",
-  "HOME_38": "APY",
-  "HOME_39": "Follow Us",
-  "HOME_40": "Click media icon to follow us",
-  "HOME_45": "2.How to check\/withdraw my staking rewards?",
-  "HOME_52": "FAQ",
-  "HOME_53": "More",
-  "HOME_54": "Audit institutions",
-  "HOME_59": "Learn More",
-  "HOME_60": "Have more questions?",
-  "HOME_61": "Check out our Gitbook for more information",
-  "HOME_63": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
-  "HOME_66": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
-  "STAKE_1": "Unstaking confirmed!",
-  "STAKE_2": "Unstake",
-  "STAKE_6": "Stake KCS",
-  "STAKE_7": "Stake KCS and receive sKCS as proof while staking",
-  "STAKE_8": "Available to stake",
-  "STAKE_9": "Get more KCS",
-  "STAKE_12": "Staked amount",
-  "STAKE_13": "Add token to wallet",
-  "STAKE_14": "Pending amount",
-  "STAKE_15": "Pending amount means the sKCS unstaking is under processing, the period takes around 3-6 days to process, you can withdraw it after that.",
-  "STAKE_17": "Available withdraw amount",
-  "STAKE_18": "Withdraw",
-  "STAKE_21": "Retry",
-  "STAKE_23": "More",
-  "STAKE_24": "How do I get my staking rewards?",
-  "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS.",
-  "STAKE_26": "You do not need to claim your rewards, sKCS you holds enables you to withdraw more KCS when you unstake sKCS.",
-  "STAKE_27": "Wallet Balance",
-  "STAKE_28": "Can I UNSTAKE my sKCS at any time?",
-  "STAKE_29": "Default sKCS unstaking period takes around 3-6 days to process, the timeline entirely depends on staking protocol. Everything is transparent.",
-  "STAKE_30": "After applying for unstake, the amount will be shown in 'Pending Amount' and you can withdraw KCS once the mount goes to 'Available Withdraw Amount'.",
-  "STAKE_31": "How can I use sKCS?",
-  "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
-  "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
-  "STAKE_35": "Statistics",
-  "STAKE_36": "Total staked amount",
-  "STAKE_37": "Stakers",
-  "STAKE_38": "sKCS market cap",
-  "STAKE_42": "Contract address",
-  "STAKE_45": "Introduction",
-  "STAKE_49": "Current balance",
-  "STAKE_50": "Get sKCS",
-  "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
-  "STAKE_57": "Unstaking failed!",
-  "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
-  "STAKE_65": "Exchange rate",
-  "STAKE_66": "You will receive",
-  "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
-  "STAKE_68": "Rewards fee",
-  "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
-  "STAKE_72": "Notification",
-  "STAKE_73": "Copied!",
-  "STAKE_76": "Stake KCS and receive sKCS as proof to earn staking rewards with high APY",
-  "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
-  "STAKE_86": "keywords",
-  "STAKE_87": "Staked Balance",
-  "DEFI_1": "Liquidity",
-  "DEFI_2": "Use sKCS across the DeFi ecosystem",
-  "DEFI_3": "Use sKCS in liquidity mining pools",
-  "DEFI_4": "Supply & Borrow",
-  "DEFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
-  "DEFI_6": "supply APY",
-  "DEFI_7": "Supply APY",
-  "DEFI_8": "Borrow APY",
-  "DEFI_9": "Collateral Factor",
-  "DEFI_10": "Supply",
-  "DEFI_11": "Borrow",
-  "DEFI_13": "APR",
-  "DEFI_14": "Total Liquidity",
-  "DEFI_15": "Add Liquidity",
-  "DEFI_16": "Swap",
-  "DEFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
-  "DEFI_22": "Yearly interest",
-  "DEFI_23": "Collateral factor",
-  "ERROR_1": "Sorry, Not Found.",
-  "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
-  "COMPONENT_3": "Amount",
-  "COMPONENT_4": "Insufficient balance",
-  "COMPONENT_5": "Please connect your wallet",
-  "COMPONENT_6": "Please enter a valid number with up to 18 decimal places.",
-  "COMPONENT_7": "The amount exceeds the available balance.",
-  "COMPONENT_8": "The amount must be greater than 0.",
-  "COMPONENT_10": "Max",
-  "COMPONENT_11": "View transaction in blockchain",
-  "COMPONENT_12": "My Wallet",
-  "COMPONENT_13": "Network",
-  "COMPONENT_14": "Wallet Address",
-  "COMPONENT_15": "Please select one of the wallets in the list",
-  "COMPONENT_17": "Please connect your wallet with one of the wallet providers",
-  "COMPONENT_19": "Unsupported Network",
-  "COMPONENT_20": "Provider Error",
-  "COMPONENT_21": "No provider was found",
-  "COMPONENT_23": "Authorization Error",
-  "COMPONENT_24": "Please authorize to access your account",
-  "COMPONENT_26": "Unknown error",
-  "COMPONENT_27": "Can't find connector",
-  "COMPONENT_28": "The connector config is wrong",
-  "COMPONENT_30": "Copy",
-  "COMPONENT_31": "View in Blockchain",
-  "COMPONENT_32": "Logout",
-  "View on KCC Explorer": "View on KCC Explorer",
-  "Home": "Home",
-  "Doc": "Doc",
-  "Staking": "Staking",
-  "DeFi Market": "DeFi Market",
-  "COMPONENT_16": "Connect Your Wallet"
+    "HOME_1": "The sKCS protocol currently has <wrap \/> <number>{{totalKCS}}<\/number> of KCS staked and <wrap \/><number>{{totalRewards}}<\/number> KCS of rewards paid with <wrap \/><number>{{apy}}%<\/number> APY",
+    "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}<\/number> of KCS staked and <number>{{totalRewards}}<\/number> KCS of rewards paid with <number>{{apy}}%<\/number> APY",
+    "HOME_5": "Stake Now",
+    "HOME_7": "Staking confirmed!",
+    "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
+    "HOME_9": "View transaction on chain.",
+    "HOME_10": "Staking failed!",
+    "HOME_11": "Please try again.",
+    "HOME_12": "APY is denominated in terms of sKCS, not USD. The calculation is based on the sKCS\/KCS exchange rate 2 days ago, it is not a guaranteed or promised return or profit. APY = (exchange price at this time - exchange price 48 hours ago)*180*100%",
+    "HOME_13": "Monthly Rewards",
+    "HOME_14": "Yearly Rewards",
+    "HOME_18": "Rewards Calculator",
+    "HOME_19": "Calculate your staking rewards and stake KCS now",
+    "HOME_20": "Enter the staking amount",
+    "HOME_21": "Connect Wallet",
+    "HOME_22": "Stake",
+    "HOME_23": "Decentralized",
+    "HOME_24": "Stake KCS to support network decentralisation and watch your sKCS value grow.",
+    "HOME_25": "Get Rewards",
+    "HOME_26": "In return for staking your KCS, sKCS accrues staking rewards over time.",
+    "HOME_27": "Leverage",
+    "HOME_28": "Use your sKCS to earn additional yields and put your sKCS to work across the KCC ecosystem.",
+    "HOME_29": "Security",
+    "HOME_30": "sKCS.io is the most reliable liquid staking protocol built on KCC, and our smart contracts have been audited by BlockSec.",
+    "HOME_31": "Why staking with sKCS",
+    "HOME_32": "1. Connect Wallet",
+    "HOME_33": "2. Stake KCS",
+    "HOME_35": "3. Get sKCS",
+    "HOME_36": "4. Use sKCS",
+    "HOME_37": "Start staking and grow your assets in only 4 steps",
+    "HOME_38": "APY",
+    "HOME_39": "Follow Us",
+    "HOME_40": "Click media icon to follow us",
+    "HOME_45": "2.How to check\/withdraw my staking rewards?",
+    "HOME_52": "FAQ",
+    "HOME_53": "More",
+    "HOME_59": "Learn More",
+    "HOME_60": "Have more questions?",
+    "HOME_61": "Check out our Gitbook for more information",
+    "HOME_63": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
+    "HOME_66": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
+    "STAKE_1": "Unstaking confirmed!",
+    "STAKE_2": "Unstake",
+    "STAKE_6": "Stake KCS",
+    "STAKE_7": "Stake KCS and receive sKCS as proof while staking",
+    "STAKE_8": "Available to stake",
+    "STAKE_9": "Get more KCS",
+    "STAKE_12": "Staked amount",
+    "STAKE_13": "Add token to wallet",
+    "STAKE_14": "Pending amount",
+    "STAKE_15": "Pending amount means the sKCS unstaking is under processing, the period takes around 3-6 days to process, you can withdraw it after that.",
+    "STAKE_17": "Available withdraw amount",
+    "STAKE_18": "Withdraw",
+    "STAKE_21": "Retry",
+    "STAKE_23": "More",
+    "STAKE_24": "How do I get my staking rewards?",
+    "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS.",
+    "STAKE_26": "You do not need to claim your rewards, sKCS you holds enables you to withdraw more KCS when you unstake sKCS.",
+    "STAKE_27": "Wallet Balance",
+    "STAKE_28": "Can I UNSTAKE my sKCS at any time?",
+    "STAKE_29": "Default sKCS unstaking period takes around 3-6 days to process, the timeline entirely depends on staking protocol. Everything is transparent.",
+    "STAKE_30": "After applying for unstake, the amount will be shown in 'Pending Amount' and you can withdraw KCS once the mount goes to 'Available Withdraw Amount'.",
+    "STAKE_31": "How can I use sKCS?",
+    "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
+    "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
+    "STAKE_35": "Statistics",
+    "STAKE_36": "Total staked amount",
+    "STAKE_37": "Stakers",
+    "STAKE_38": "sKCS market cap",
+    "STAKE_42": "Contract address",
+    "STAKE_45": "Introduction",
+    "STAKE_49": "Current balance",
+    "STAKE_50": "Get sKCS",
+    "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
+    "STAKE_57": "Unstaking failed!",
+    "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
+    "STAKE_65": "Exchange rate",
+    "STAKE_66": "You will receive",
+    "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
+    "STAKE_68": "Rewards fee",
+    "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
+    "STAKE_72": "Notification",
+    "STAKE_73": "Copied!",
+    "STAKE_76": "Stake KCS and receive sKCS as proof to earn staking rewards with high APY",
+    "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
+    "STAKE_86": "keywords",
+    "STAKE_87": "Staked Balance",
+    "DEFI_1": "Liquidity",
+    "DEFI_2": "Use sKCS across the DeFi ecosystem",
+    "DEFI_3": "Use sKCS in liquidity mining pools",
+    "DEFI_4": "Supply & Borrow",
+    "DEFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
+    "DEFI_6": "supply APY",
+    "DEFI_7": "Supply APY",
+    "DEFI_8": "Borrow APY",
+    "DEFI_9": "Collateral Factor",
+    "DEFI_10": "Supply",
+    "DEFI_11": "Borrow",
+    "DEFI_13": "APR",
+    "DEFI_14": "Total Liquidity",
+    "DEFI_15": "Add Liquidity",
+    "DEFI_16": "Swap",
+    "DEFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
+    "DEFI_22": "Yearly interest",
+    "DEFI_23": "Collateral factor",
+    "ERROR_1": "Sorry, Not Found.",
+    "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
+    "COMPONENT_3": "Amount",
+    "COMPONENT_4": "Insufficient balance",
+    "COMPONENT_5": "Please connect your wallet",
+    "COMPONENT_6": "Please enter a valid number with up to 18 decimal places.",
+    "COMPONENT_7": "The amount exceeds the available balance.",
+    "COMPONENT_8": "The amount must be greater than 0.",
+    "COMPONENT_10": "Max",
+    "COMPONENT_11": "View transaction in blockchain",
+    "COMPONENT_12": "My Wallet",
+    "COMPONENT_13": "Network",
+    "COMPONENT_14": "Wallet Address",
+    "COMPONENT_15": "Please select one of the wallets in the list",
+    "COMPONENT_17": "Please connect your wallet with one of the wallet providers",
+    "COMPONENT_19": "Unsupported Network",
+    "COMPONENT_20": "Provider Error",
+    "COMPONENT_21": "No provider was found",
+    "COMPONENT_23": "Authorization Error",
+    "COMPONENT_24": "Please authorize to access your account",
+    "COMPONENT_26": "Unknown error",
+    "COMPONENT_27": "Can't find connector",
+    "COMPONENT_28": "The connector config is wrong",
+    "COMPONENT_30": "Copy",
+    "COMPONENT_31": "View in Blockchain",
+    "COMPONENT_32": "Logout",
+    "View on KCC Explorer": "View on KCC Explorer",
+    "Home": "Home",
+    "Doc": "Doc",
+    "Staking": "Staking",
+    "DeFi Market": "DeFi Market",
+    "COMPONENT_16": "Connect Your Wallet",
+    "HOME_62": "KCS Staking | sKCS",
+    "STAKE_74": "Staking | sKCS",
+    "DEFI_17": "DeFi Market | sKCS"
 }
