--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,6 +2,7 @@
     "HOME_1": "The sKCS protocol currently has <wrap \/> <number>{{totalKCS}}<\/number> of KCS staked and <wrap \/><number>{{totalRewards}}<\/number> KCS of rewards paid with <wrap \/><number>{{apy}}%<\/number> APY",
     "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}<\/number> of KCS staked and <number>{{totalRewards}}<\/number> KCS of rewards paid with <number>{{apy}}%<\/number> APY",
     "HOME_5": "Stake Now",
+    "HOME_3": "Withdraw {{skcs}} sKCS and receive {{kcs}} KCS",
     "HOME_7": "Staking confirmed!",
     "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
     "HOME_9": "View transaction on chain.",
