--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,6 @@
     "HOME_1": "The sKCS protocol currently has <wrap \/> <number>{{totalKCS}}<\/number> of KCS staked and <wrap \/><number>{{totalRewards}}<\/number> KCS of rewards paid with <wrap \/><number>{{apy}}%<\/number> APY",
     "HOME_2": "The sKCS protocol currently has <number>{{totalKCS}}<\/number> of KCS staked and <number>{{totalRewards}}<\/number> KCS of rewards paid with <number>{{apy}}%<\/number> APY",
     "HOME_5": "Stake Now",
-    "HOME_3": "Withdraw {{skcs}} sKCS and receive {{kcs}} KCS",
     "HOME_7": "Staking confirmed!",
     "HOME_8": "Stake {{inputValue}} KCS and receive {{skcsAmount}} sKCS",
     "HOME_9": "View transaction on chain.",
@@ -33,10 +32,8 @@
     "HOME_38": "APY",
     "HOME_39": "Follow Us",
     "HOME_40": "Click media icon to follow us",
-    "HOME_45": "2.How to check\/withdraw my staking rewards?",
     "HOME_52": "FAQ",
     "HOME_53": "More",
-    "HOME_59": "Learn More",
     "HOME_60": "Have more questions?",
     "HOME_61": "Check out our Gitbook for more information",
     "HOME_63": "Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY",
@@ -53,7 +50,6 @@
     "STAKE_15": "Pending amount means the sKCS unstaking is under processing, the period takes around 3-6 days to process, you can withdraw it after that.",
     "STAKE_17": "Available withdraw amount",
     "STAKE_18": "Withdraw",
-    "STAKE_21": "Retry",
     "STAKE_23": "More",
     "STAKE_24": "How do I get my staking rewards?",
     "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS.",
@@ -69,8 +65,6 @@
     "STAKE_36": "Total staked amount",
     "STAKE_37": "Stakers",
     "STAKE_38": "sKCS market cap",
-    "STAKE_42": "Contract address",
-    "STAKE_45": "Introduction",
     "STAKE_49": "Current balance",
     "STAKE_50": "Get sKCS",
     "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
@@ -81,11 +75,9 @@
     "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
     "STAKE_68": "Rewards fee",
     "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
-    "STAKE_72": "Notification",
     "STAKE_73": "Copied!",
     "STAKE_76": "Stake KCS and receive sKCS as proof to earn staking rewards with high APY",
     "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
-    "STAKE_86": "keywords",
     "STAKE_87": "Staked Balance",
     "DEFI_1": "Liquidity",
     "DEFI_2": "Use sKCS across the DeFi ecosystem",
@@ -126,18 +118,21 @@
     "COMPONENT_23": "Authorization Error",
     "COMPONENT_24": "Please authorize to access your account",
     "COMPONENT_26": "Unknown error",
-    "COMPONENT_27": "Can't find connector",
-    "COMPONENT_28": "The connector config is wrong",
+    "COMPONENT_27": "Cannot find wallet connector",
+    "COMPONENT_28": "Wallet connector settings incorrect",
     "COMPONENT_30": "Copy",
-    "COMPONENT_31": "View in Blockchain",
-    "COMPONENT_32": "Logout",
+    "COMPONENT_31": "View on Block Explorer",
+    "COMPONENT_32": "Log Out",
     "View on KCC Explorer": "View on KCC Explorer",
     "Home": "Home",
-    "Doc": "Doc",
+    "Doc": "Documentation",
     "Staking": "Staking",
     "DeFi Market": "DeFi Market",
     "COMPONENT_16": "Connect Your Wallet",
     "HOME_62": "KCS Staking | sKCS",
     "STAKE_74": "Staking | sKCS",
-    "DEFI_17": "DeFi Market | sKCS"
+    "DEFI_17": "DeFi Market | sKCS",
+    "HOME_3": "{{skcs}} sKCS redeemed for {{kcs}} KCS",
+    "HOME_4": "Withdrawal confirmed!",
+    "Withdraw failed!": "Withdraw failed!"
 }
