--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -32,10 +32,8 @@
     "HOME_38": "APY",
     "HOME_39": "關注我們",
     "HOME_40": "點擊即可關注我們",
-    "HOME_45": "2.如何查看\/提取我的質押收益？",
     "HOME_52": "常見問題",
     "HOME_53": "查看更多",
-    "HOME_59": "查看更多",
     "HOME_60": "有更多問題嗎？",
     "HOME_61": "查看官方Gitbook獲取更多資訊",
     "HOME_63": "質押KCS，不僅能獲得sKCS不斷積累的質押獎勵，還能使用sKCS賺取額外的DeFi收益",
@@ -52,7 +50,6 @@
     "STAKE_15": "‘取消質押數量’表示正在處理取消您的sKCS質押，這個週期一般需要3至6天，處理完成後您便可點擊‘提取’按鈕取回KCS。",
     "STAKE_17": "可提取金額",
     "STAKE_18": "提取",
-    "STAKE_21": "重試一次",
     "STAKE_23": "查看更多",
     "STAKE_24": "如何獲得質押收益？",
     "STAKE_25": "sKCS代表了你質押的KCS及獲得的質押收益。",
@@ -68,8 +65,6 @@
     "STAKE_36": "總質押量",
     "STAKE_37": "質押者",
     "STAKE_38": "sKCS市值",
-    "STAKE_42": "合約地址",
-    "STAKE_45": "介紹",
     "STAKE_49": "當前可用餘額",
     "STAKE_50": "獲得sKCS",
     "STAKE_55": "取消質押{{inputValue}}sKCS並將收到{{totalKSC}}KCS。",
@@ -80,11 +75,9 @@
     "STAKE_67": "取消質押sKCS默認需3至6天時間處理，你可在處理完成後點擊‘提取’按鈕取回。",
     "STAKE_68": "收益費率",
     "STAKE_69": "該費用僅從質押收益中收取，不會扣除您的質押本金，只作用在收益部分。",
-    "STAKE_72": "通知",
     "STAKE_73": "已複製！",
     "STAKE_76": "質押KCS將收到sKCS作為憑證，賺取高年化收益的質押收益",
     "STAKE_84": "在DEX上交易 - sKCS在很多去中心化交易所都可用，並且可以交換成其他加密貨幣。請記住，通過交換你的sKCS，你也會同時交換你累積的質押獎勵。 ",
-    "STAKE_86": "關鍵詞",
     "STAKE_87": "質押量",
     "DEFI_1": "流動性池",
     "DEFI_2": "在DeFi生態中使用sKCS",
@@ -105,7 +98,7 @@
     "DEFI_22": "年息",
     "DEFI_23": "抵押率",
     "ERROR_1": "對不起，未找到。",
-    "COMPONENT_1": "© Copyrigh {{asset}} 2022 sKCS.io 版權所有",
+    "COMPONENT_1": "© Copyrigh {{asset}} sKCS.io 版權所有",
     "COMPONENT_3": "數量",
     "COMPONENT_4": "可用餘額不足",
     "COMPONENT_5": "請連接你的錢包",
@@ -138,5 +131,8 @@
     "COMPONENT_16": "請連接你的錢包",
     "HOME_62": "KCS 質押 | sKCS",
     "STAKE_74": "質押 | sKCS",
-    "DEFI_17": "DeFi 市場 | sKCS"
+    "DEFI_17": "DeFi 市場 | sKCS",
+    "HOME_3": "提取{{skcs}}sKCS並收到{{kcs}}KCS。",
+    "HOME_4": "取款已確認！",
+    "Withdraw failed!": "取款失敗！"
 }
