fix(staking): fix rewards fee

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,7 @@
     "STAKE_31": "How can I use sKCS?",
     "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
     "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
+    "STAKE_34": "Liquidity provision - sKCS/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs.",
     "STAKE_35": "Market Data",
     "STAKE_36": "Total staked amount",
     "STAKE_37": "Stakers",
@@ -72,7 +73,7 @@
     "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
     "STAKE_65": "Exchange rate",
     "STAKE_66": "You will receive",
-    "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that.",
+    "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that. The withdrawable amount is net of a {{fee}}% rewards commission fee.",
     "STAKE_68": "Rewards fee",
     "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
     "STAKE_73": "Copied!",
