--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -48,7 +48,7 @@
     "STAKE_13": "將代幣導入錢包",
     "STAKE_14": "取消質押數量",
     "STAKE_15": "‘取消質押數量’表示正在處理取消您的sKCS質押，這個週期一般需要3至6天，處理完成後您便可點擊‘提取’按鈕取回KCS。",
-    "STAKE_17": "可提取金額",
+    "STAKE_17": "可提取數量",
     "STAKE_18": "提取",
     "STAKE_23": "查看更多",
     "STAKE_24": "如何獲得質押收益？",
@@ -72,7 +72,7 @@
     "STAKE_61": "質押{{inputValue}}KCS並將收到{{totalsKSC}}sKCS。",
     "STAKE_65": "匯率",
     "STAKE_66": "您將收到",
-    "STAKE_67": "取消質押sKCS默認需3至6天時間處理，你可在處理完成後點擊‘提取’按鈕取回。",
+    "STAKE_67": "取消質押sKCS默認需3至6天時間處理，你可在處理完成後點擊‘提取’按鈕取回。‘可提取數量’中已扣除了 {{fee}} %的獎勵手續費。",
     "STAKE_68": "收益費率",
     "STAKE_69": "該費用僅從質押收益中收取，不會扣除您的質押本金，只作用在收益部分。",
     "STAKE_73": "已複製！",
@@ -135,5 +135,6 @@
     "HOME_3": "提取{{skcs}}sKCS並收到{{kcs}}KCS。",
     "HOME_4": "取款已確認！",
     "Withdraw failed!": "取款失敗！",
-    "Withdraw Notification": "您已成功提取 {{amount}} KCS！"
+    "Withdraw Notification": "您已成功提取 {{amount}} KCS！",
+    "STAKE_34": "提供流動性 - sKCS\/XXX 池 - 這些流動性池可能會有無常損失，但可以讓你為大量幣對提供流動性。"
 }
