--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,18 +12,18 @@
     "HOME_14": "Yearly Rewards",
     "HOME_18": "Rewards Calculator",
     "HOME_19": "Calculate your staking rewards and stake KCS now",
-    "HOME_20": "Enter the staking amount",
+    "HOME_20": "Enter amount to stake",
     "HOME_21": "Connect Wallet",
     "HOME_22": "Stake",
     "HOME_23": "Decentralized",
-    "HOME_24": "Stake KCS to support network decentralisation and watch your sKCS value grow.",
-    "HOME_25": "Get Rewards",
+    "HOME_24": "Stake KCS to support network decentralization, obtain sKCS, and watch your assets grow in value.",
+    "HOME_25": "Earn Rewards",
     "HOME_26": "In return for staking your KCS, sKCS accrues staking rewards over time.",
     "HOME_27": "Leverage",
-    "HOME_28": "Use your sKCS to earn additional yields and put your sKCS to work across the KCC ecosystem.",
+    "HOME_28": "Use sKCS to earn additional income across the DeFi and KCC ecosystem.",
     "HOME_29": "Security",
-    "HOME_30": "sKCS.io is the most reliable liquid staking protocol built on KCC, and our smart contracts have been audited by BlockSec.",
-    "HOME_31": "Why staking with sKCS",
+    "HOME_30": "sKCS is the most reliable liquid staking protocol on the KCC chain, and our smart contracts have been audited by BlockSec.",
+    "HOME_31": "Why stake on sKCS.io",
     "HOME_32": "1. Connect Wallet",
     "HOME_33": "2. Stake KCS",
     "HOME_35": "3. Get sKCS",
@@ -41,50 +41,49 @@
     "STAKE_1": "Unstaking confirmed!",
     "STAKE_2": "Unstake",
     "STAKE_6": "Stake KCS",
-    "STAKE_7": "Stake KCS and receive sKCS as proof while staking",
+    "STAKE_7": "Stake KCS and receive sKCS as a certificate of staking",
     "STAKE_8": "Available to stake",
     "STAKE_9": "Get more KCS",
     "STAKE_12": "Staked amount",
-    "STAKE_13": "Add token to wallet",
+    "STAKE_13": "Import token into wallet",
     "STAKE_14": "Pending amount",
-    "STAKE_15": "Pending amount means the sKCS unstaking is under processing, the period takes around 3-6 days to process, you can withdraw it after that.",
-    "STAKE_17": "Available withdraw amount",
+    "STAKE_15": "The \"pending amount\" refers to the amount of sKCS being unstaked, which usually takes 3-6 days. Once complete, you can withdraw KCS by tapping the \"Withdraw\" button.",
+    "STAKE_17": "Available for withdrawal",
     "STAKE_18": "Withdraw",
     "STAKE_23": "More",
     "STAKE_24": "How do I get my staking rewards?",
     "STAKE_25": "sKCS represents your staked KCS and your rewards from KCS.",
     "STAKE_26": "You do not need to claim your rewards, sKCS you holds enables you to withdraw more KCS when you unstake sKCS.",
     "STAKE_27": "Wallet Balance",
-    "STAKE_28": "Can I UNSTAKE my sKCS at any time?",
+    "STAKE_28": "Can I unstake my sKCS at any time?",
     "STAKE_29": "Default sKCS unstaking period takes around 3-6 days to process, the timeline entirely depends on staking protocol. Everything is transparent.",
     "STAKE_30": "After applying for unstake, the amount will be shown in 'Pending Amount' and you can withdraw KCS once the mount goes to 'Available Withdraw Amount'.",
     "STAKE_31": "How can I use sKCS?",
     "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
     "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
-    "STAKE_34": "Liquidity provision - sKCS/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs.",
     "STAKE_35": "Market Data",
     "STAKE_36": "Total staked amount",
     "STAKE_37": "Stakers",
     "STAKE_38": "sKCS market cap",
-    "STAKE_49": "Current balance",
+    "STAKE_49": "Available balance",
     "STAKE_50": "Get sKCS",
-    "STAKE_55": "Unstake {{inputValue}} sKCS and receive {{totalKSC}} KCS. ",
+    "STAKE_55": "You will receive {{totalKSC}} for unstaking {{inputValue}} sKCS.",
     "STAKE_57": "Unstaking failed!",
-    "STAKE_61": "Stake {{inputValue}} KCS and receive  {{totalsKSC}} sKCS. ",
+    "STAKE_61": "Received {{totalsKSC}} sKCS for staking {{inputValue}} KCS.",
     "STAKE_65": "Exchange rate",
     "STAKE_66": "You will receive",
     "STAKE_67": "Default sKCS unstaking period takes around 3-6 days to process, you can withdraw it after that. The withdrawable amount is net of a {{fee}}% rewards commission fee.",
     "STAKE_68": "Rewards fee",
     "STAKE_69": "This fee applies to staking rewards only, and is NOT taken from your staked amount, it is a fee on earnings only.",
     "STAKE_73": "Copied!",
-    "STAKE_76": "Stake KCS and receive sKCS as proof to earn staking rewards with high APY",
+    "STAKE_76": "Stake KCS and receive sKCS as a certificate to earn staking rewards with high APY",
     "STAKE_84": "Trade on DEXs - sKCS is available on most decentralized exchanges and can be traded for other crypto tokens. Remember, by trading your sKCS, you also trade your accumulated rewards.",
-    "STAKE_87": "Staked Balance",
-    "DEFI_1": "Liquidity",
+    "STAKE_87": "Staked amount",
+    "DEFI_1": "Liquidity Pools",
     "DEFI_2": "Use sKCS across the DeFi ecosystem",
-    "DEFI_3": "Use sKCS in liquidity mining pools",
+    "DEFI_3": "Use sKCS for yield farming",
     "DEFI_4": "Supply & Borrow",
-    "DEFI_5": "Supply sKCS to earn interest, collateral to borrow other assets.",
+    "DEFI_5": "Supply sKCS to earn interest. Use sKCS as collateral to borrow other assets.",
     "DEFI_6": "supply APY",
     "DEFI_7": "Supply APY",
     "DEFI_8": "Borrow APY",
@@ -98,25 +97,25 @@
     "DEFI_18": "Use sKCS in the DeFi ecosystem. Participants can supply sKCS to earn interest or use sKCS as collateral to borrow other crypto assets.",
     "DEFI_22": "Yearly interest",
     "DEFI_23": "Collateral factor",
-    "ERROR_1": "Sorry, Not Found.",
-    "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
+    "ERROR_1": "Sorry, not found.",
+    "COMPONENT_1": "Copyright © {{asset}} sKCS.io. All Rights Reserved.",
     "COMPONENT_3": "Amount",
     "COMPONENT_4": "Insufficient balance",
     "COMPONENT_5": "Please connect your wallet",
-    "COMPONENT_6": "Please enter a valid number with up to 18 decimal places.",
-    "COMPONENT_7": "The amount exceeds the available balance.",
+    "COMPONENT_6": "Enter a valid number with up to 18 decimal places.",
+    "COMPONENT_7": "Amount exceeds available balance",
     "COMPONENT_8": "The amount must be greater than 0.",
     "COMPONENT_10": "Max",
-    "COMPONENT_11": "View transaction in blockchain",
+    "COMPONENT_11": "View on Block Explorer",
     "COMPONENT_12": "My Wallet",
     "COMPONENT_13": "Network",
     "COMPONENT_14": "Wallet Address",
-    "COMPONENT_15": "Please select one of the wallets in the list",
-    "COMPONENT_17": "Please connect your wallet with one of the wallet providers",
-    "COMPONENT_19": "Unsupported Network",
-    "COMPONENT_20": "Provider Error",
-    "COMPONENT_21": "No provider was found",
-    "COMPONENT_23": "Authorization Error",
+    "COMPONENT_15": "Select a wallet",
+    "COMPONENT_17": "Select a wallet to connect to",
+    "COMPONENT_19": "Network error",
+    "COMPONENT_20": "Wallet error",
+    "COMPONENT_21": "Application not found",
+    "COMPONENT_23": "Authorization error",
     "COMPONENT_24": "Please authorize to access your account",
     "COMPONENT_26": "Unknown error",
     "COMPONENT_27": "Cannot find wallet connector",
@@ -136,5 +135,6 @@
     "HOME_3": "{{skcs}} sKCS redeemed for {{kcs}} KCS",
     "HOME_4": "Withdrawal confirmed!",
     "Withdraw failed!": "Withdraw failed!",
-    "Withdraw Notification": "Withdraw {{amount}} KCS successfully!"
+    "Withdraw Notification": "Withdraw {{amount}} KCS successfully!",
+    "STAKE_34": "Liquidity provision - sKCS\/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs."
 }
