--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,7 @@
     "HOME_11": "Please try again.",
     "HOME_12": "APY is the projected compounded annualized rate of return for 1 year of holding sKCS. Return calculations are based on sKCS\/KCS exchange rates over the past 24 hours with the rewards fee deducted.",
     "HOME_13": "Monthly Rewards",
-    "HOME_14": "Yearly Rewards",
+    "HOME_14": "Annual Rewards",
     "HOME_18": "Rewards Calculator",
     "HOME_19": "Calculate your staking rewards and stake KCS now",
     "HOME_20": "Enter amount to stake",
@@ -137,13 +137,13 @@
     "Withdraw failed!": "Withdraw failed!",
     "Withdraw Notification": "Successfully withdrawn {{amount}} KCS!",
     "STAKE_34": "Liquidity provision - sKCS\/XXX pools. There may be potential losses but these pools will allow you to provide liquidity for a large number of pairs.",
-    "Supply Now": "Supply Now",
-    "Suuply APY": "Supply APY",
-    "Enter the supply amount": "Enter the supply amount",
-    "Yearly interest": "Yearly interest",
-    "Borrowable value": "Borrowable value",
-    "Collateral factor tip": "Collateral factor represents the maximum borrowing ratio when a specific asset is used as collateral. For example, if sKCS is collateral at 80% and the current price is 20 USD, then 1 sKCS can be borrowed in the market for up to 16 USD (0.8 * 20) of other assets.",
-    "Borrowable value tip": "Borrowable value= value of collateral assets * collateral factor. For example, if sKCS is collateral at 80% and the current price is 2 USD, then 100 sKCS can be borrowed in the market for up to 160 USD (0.8 * 2*100) of other assets.",
-    "Displayed APY tip": "Displayed APY is based on the current supply APY and rewards.",
-    "Borrow APY tip": "Displayed APY is based on the current borrow APY and rewards."
+    "Supply Now": "Deposit",
+    "Suuply APY": "Deposit APY",
+    "Enter the supply amount": "Enter the deposit amount",
+    "Yearly interest": "Annual Interest (Estimated)",
+    "Collateral factor": "Collateral Factor",
+    "Borrowable value": "Borrowable Amount",
+    "Collateral factor tip": "The collateral factor represents the maximum borrowing ratio when a specific asset is used as collateral. For example, if the collateral factor for sKCS is 80%, and sKCS price is currently 20 USD, then 1 sKCS can be used as collateral to borrow up to 16 (0.8*20) USD of other assets in the market.",
+    "Borrowable value tip": "Borrowable amount = (collateral value) * (collateral factor). For example, if the collateral factor for sKCS is 80%, and sKCS price is currently 20 USD, then 1 sKCS can be used as collateral to borrow up to 16 (0.8*20) USD of other assets in the market.",
+    "Displayed APY tip": "The APY shown is based on the Deposit APY and reward earnings."
 }
