--- a/src/locales/tr_TR.json
+++ b/src/locales/tr_TR.json
@@ -1,5 +1,5 @@
 {
-    "HOME_1": "sKCS protokolde şu anda <number> {{totalKCS}} <\/number> KCS stake edilmekte,  <number> {{totalRewards}} <\/number> ödül çoktan ödendi ve APY ise <number> %{{apy}} <\/number>",
+    "HOME_1": "sKCS protokolde şu anda <number>{{totalKCS}}<\/number> KCS stake edilmekte,<number>{{totalRewards}}<\/number> ödül çoktan ödendi ve APY ise <number>%{{apy}}<\/number>",
     "HOME_2": "sKCS protokolde şu anda <number> {{totalKCS}} <\/number> KCS stake edilmekte, <number> {{totalRewards}} <\/number> ödül çoktan ödendi ve APY ise <number> %{{apy}} <\/number>",
     "HOME_5": "Şimdi Stake Edin",
     "HOME_7": "Stake onaylandı!",
@@ -136,5 +136,14 @@
     "HOME_4": "Çekme işlemi onaylandı!",
     "Withdraw failed!": "Çekme işlemi başarısız!",
     "Withdraw Notification": "{{amount}} KCS başarıyla çekildi!",
-    "STAKE_34": "Likidite sağlama - sKCS\/XXX havuzları. Potansiyel kayıplar olabilir ancak bu havuzlar çok sayıda işlem çifti için likidite sağlamanıza olanak tanıyacaktır."
+    "STAKE_34": "Likidite sağlama - sKCS\/XXX havuzları. Potansiyel kayıplar olabilir ancak bu havuzlar çok sayıda işlem çifti için likidite sağlamanıza olanak tanıyacaktır.",
+    "Supply Now": "Yatır",
+    "Suuply APY": "Yatırma APY'si",
+    "Enter the supply amount": "Yatırma miktarını girin",
+    "Yearly interest": "Yıllık Faiz (Tahmini)",
+    "Collateral factor": "Teminat Faktörü",
+    "Borrowable value": "Borçlanılabilir Miktar",
+    "Collateral factor tip": "Teminat faktörü, belirli bir varlık teminat olarak kullanıldığında maksimum borçlanma oranını temsil eder. Örneğin, sKCS için teminat faktörü %80 ise ve sKCS fiyatı şu anda 20 USD ise, 1 sKCS; piyasadaki diğer varlıklardan 16 (0.8*20) USD'ye kadar borçlanmak için teminat olarak kullanılabilir.",
+    "Borrowable value tip": "Borçlanılabilir miktar = (teminat değeri) * (teminat faktörü). Örneğin, sKCS için teminat faktörü %80 ise ve sKCS fiyatı şu anda 20 USD ise, 1 sKCS; piyasadaki diğer varlıklardan 16 (0.8*20) USD'ye kadar borçlanmak için teminat olarak kullanılabilir.",
+    "Displayed APY tip": "Gösterilen APY; yatırma APY'sine ve kazanılan ödüllere dayanmaktadır."
 }
